[gd_scene load_steps=15 format=2]

[ext_resource path="res://SwipeCard/GameController.gd" type="Script" id=1]
[ext_resource path="res://SwipeCard/SwipeDetector.gd" type="Script" id=2]
[ext_resource path="res://SwipeCard/assets/bg2.png" type="Texture" id=3]
[ext_resource path="res://SwipeCard/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SwipeCard/Card.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://SwipeCard/assets/card.png" type="Texture" id=7]
[ext_resource path="res://SwipeCard/assets/bgm1.ogg" type="AudioStream" id=8]
[ext_resource path="res://SwipeCard/assets/cardSlide6.ogg" type="AudioStream" id=9]
[ext_resource path="res://SwipeCard/Tutorial.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 146.727, 259.28 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 4 )

[node name="SwipeCardMain" type="Node"]
script = ExtResource( 1 )

[node name="SwipeDetector" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="SwipeDetector"]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 288, 512 )
z_index = 1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreLabel" type="Label" parent="Sprite"]
anchor_right = 1.0
margin_left = -164.461
margin_top = -439.0
margin_right = -723.461
margin_bottom = -366.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0
"

[node name="LevelLabel" type="Label" parent="Sprite"]
margin_left = -164.0
margin_top = -495.0
margin_right = -132.0
margin_bottom = -410.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0
"

[node name="Card" type="KinematicBody2D" parent="."]
position = Vector2( 144, 336 )
z_index = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card"]
position = Vector2( 142.76, 259.12 )
z_index = 1
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Card"]
position = Vector2( 144, 156 )
z_index = 1
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Card"]
wait_time = 0.6
one_shot = true

[node name="CardBackground" type="Sprite" parent="Card"]
position = Vector2( 144, 256 )
texture = ExtResource( 7 )

[node name="CardName" type="Label" parent="Card/CardBackground"]
margin_left = -134.0
margin_top = 48.0
margin_right = 140.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
align = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="CardSlide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Node2D" parent="." instance=ExtResource( 10 )]
z_index = 2

[connection signal="check_answer" from="SwipeDetector" to="Card" method="_on_SwipeDetector_check_answer"]
[connection signal="correct_answer" from="Card" to="." method="_on_Card_correct_answer"]
[connection signal="wake_input" from="Card" to="SwipeDetector" method="_on_Card_wake_input"]
[connection signal="timeout" from="Card/Timer" to="Card" method="_on_Timer_timeout"]
